--- a/view/frontend/templates/testimonial/slider.phtml
+++ b/view/frontend/templates/testimonial/slider.phtml
@@ -3,17 +3,50 @@
  * @var $block \SuttonSilver\Testimonials\Block\Testimonial\Slider
  */
 ?>
-<div class="container">
-	<?= $block->getLoadedCollection() ?>
-    <?php foreach($collection as $item): ?>
-        <div class="flex-container">
-            <div class="testimonial vertical-center center">
-                <?= $item->getTestimonial(); ?>
-                <div class="author">
-                    <span class="name"><?= $item->getName(); ?></span>
-                    <span class="email"><?= $item->getEmail(); ?></span>
-                </div>
+<div class="row">
+    <div class="large-12">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <?php $collection = $block->getLoadedCollection() ?>
+                <?php foreach ($collection as $item): ?>
+
+                    <div class="swiper-slide">
+                            <?php $image = json_decode($item->getImage()); ?>
+                            <?php if($image->name) : ?>
+                            <div class="image">
+                                    <img src="<?= '/pub/media/wysiwyg/testimonials/'.$image->name; ?> " />
+                            </div>
+                            <?php endif ; ?>
+
+                        <div class="inner">
+                            <?= $item->getTestimonial(); ?>
+                            <div class="author">
+                                <span class="name"><?= $item->getName(); ?></span>
+                                <span class="email"><?= $item->getEmail(); ?></span>
+                            </div>
+                        </div>
+                    </div>
+
+                <?php endforeach; ?>
             </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
-    <?php endforeach; ?>
+    </div>
 </div>
+
+<script type="text/x-magento-init">
+    {
+        "#swiper-container": {
+            "slider": {}
+        },
+        "*": {
+            "Magento_Ui/js/block-loader": "<?= $block->escapeJs($block->escapeUrl($block->getViewFileUrl('images/loader-1.gif'))) ?>"
+        }
+    }
+
+</script>
